# csv_median_calculator

Documents/GitHub/csv_median_calculator/: .clang-format  .gitignore  CMakeLists.txt  README.md  config.toml  specs.md
Documents/GitHub/csv_median_calculator/examples/input/: btcusdt_level_2024.csv  btcusdt_trade_2024.csv
Documents/GitHub/csv_median_calculator/examples/output/: median_result.csv
Documents/GitHub/csv_median_calculator/src/: directory_scanner.cpp  directory_scanner.hpp  main.cpp  median_calculator.cpp  median_calculator.hpp  parser_csv.cpp  parser_csv.hpp
Documents/GitHub/csv_median_calculator/tests/: test_directory_scanner.cpp  test_median_calculator.cpp  test_parser_csv.cpp
